feat: chat enpoint
